--- a/MovieInfo.html
+++ b/MovieInfo.html
@@ -4,10 +4,10 @@
   <body>
     <table border=1>
       <tr><td>Movie Name</td><td>Update Time</td></tr>
-<tr><td>Movie[i]</td><td>Info[i]</td></tr>
-<tr><td>Movie[i]</td><td>Info[i]</td></tr>
-<tr><td>Movie[i]</td><td>Info[i]</td></tr>
-<tr><td>Movie[i]</td><td>Info[i]</td></tr>
+<tr><td>Mission ABC</td><td>08-11-2021</td></tr>
+<tr><td>After EFG</td><td>11-23-1990</td></tr>
+<tr><td>Who are you</td><td>06-17-1999</td></tr>
+<tr><td>I am the King</td><td>04-01-2000</td></tr>
     </table>
   </body>
 </html>
